--- a/furniture.html
+++ b/furniture.html
@@ -104,8 +104,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
+            </div>        
         </nav>
     </header>
     <div class="container">
@@ -124,7 +123,7 @@
                         </div>
                         <div class="watch-vid">
                             <button class="play-now"><img class="play-vid-op" src="image/play.png"> Watch
-                                Video</button>
+                                Now</button>
                         </div>
                     </div>
                 </div>
