--- a/furniture.html
+++ b/furniture.html
@@ -41,13 +41,13 @@
                                 <div class="call-img">
                                     <img src="image/Call.png">
                                     <a href="#">
-                                        <p>+ 1234567890</p>
+                                        <p>+ 0123654789</p>
                                     </a>
                                 </div>
                                 <div class="call-img">
                                     <img src="image/Email.png">
                                     <a href="#">
-                                        <p>others@gmail.com</p>
+                                        <p>your@gmail.com</p>
                                     </a>
                                 </div>
                             </div>
