--- a/furniture.html
+++ b/furniture.html
@@ -997,9 +997,9 @@
                 <div class="furni-category">
                     <h6>Popular Product</h6>
                     <p><a href="#">Single Sofa Black</a></p>
-                    <p><a href="#"></a>Wooden Bookcase</p>
-                    <p><a href="#"></a>Wooden Chair</p>
-                    <p><a href="#"></a>Luxury White Bed</p>
+                    <p><a href="#">Wooden Bookcase</a></p>
+                    <p><a href="#">Wooden Chair</a></p>
+                    <p><a href="#">Luxury White Bed</a></p>
                 </div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2">
