--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="material">
                 <div class="work-product">
-                    <button class="sum-prod">Cheak Our Product</button>
+                    <span class="sum-prod">Cheak Our Product</span>
                     <h3>Crafted with excellent material</h3>
                 </div>
                 <div class="gallry-section" id="myBtnContainer">
@@ -732,7 +732,7 @@
     <div class="container">
         <div class="multy-gallery" style="margin-top: 40px;">
             <div class="collect-btn" style="text-align: center;">
-                <button class="our-colle">cheak Our Collection</button>
+                <span class="our-colle">cheak Our Collection</span>
                 <h1>Our Furniture Gallery</h1>
                 <p>Explore Our Gallery of Inspiring Designs</p>
             </div>
@@ -773,7 +773,7 @@
 
     <div class="recliner mt-5">
         <div class="customer-say" style="text-align: center;">
-            <button class="test-section">Testimonial Section</button>
+            <span class="test-section">Testimonial Section</span>
             <h1>What Our Customer Say</h1>
             <p>Discover the Stories and Experiences of Our Delighted Customers</p>
         </div>
