--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -53,16 +55,16 @@
                             </div>
                             <div class="media-icon">
                                 <div class="online-feb">
-                                    <a href="https://www.instagram.com/?hl=en"><img src="image/instagram.png"></a>
+                                    <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a>
                                 </div>
                                 <div class="online-feb">
-                                    <a href="https://www.facebook.com/"><img src="image/facebook.png"></a>
+                                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
                                 </div>
                                 <div class="online-feb">
-                                    <a href="https://twitter.com/i/flow/login"><img src="image/twitter.png"></a>
+                                    <a href="https://twitter.com/i/flow/login"><i class="fab fa-twitter"></i></a>
                                 </div>
                                 <div class="online-feb">
-                                    <a href="https://www.linkedin.com/login"><img src="image/social.png"></a>
+                                    <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-            </div>        
+            </div>
         </nav>
     </header>
     <div class="container">
@@ -122,8 +124,7 @@
                             <button class="ofer-sow">Explor Your Offers</button>
                         </div>
                         <div class="watch-vid">
-                            <button class="play-now"><img class="play-vid-op" src="image/play.png"> Watch
-                                Now</button>
+                            <button class="play-now"> <i class="fa fa-play"> Watch Now </i></button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +146,7 @@
                         <span>Cozy Seating</span>
                     </div>
                 </div>
-                <div class="serv-name">  
+                <div class="serv-name">
                     <h6>Quality Assurance</h6>
                     <div class="seating">
                         <img src="image/Location.png">
@@ -399,7 +400,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>  
+                    </div>
                     <div class="gallarey-image people">
                         <div class="content1">
                             <img src="image/g1.png" alt="Car" style="width:100%">
@@ -438,7 +439,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png"   >
+                                    <img src="image/cart_btn.png">
                                 </div>
                             </div>
                         </div>
