--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="nav-feix">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
-                <div class="row" style="justify-content: space-between">
+                <div class="row" style=" padding: 0px 11px; justify-content: space-between">
                     <div class="logo-secondin">
                         <a class="navbar-brand" href="#">
                             <h3>Furniture</h3>
