--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                                 </div>
                             </div>
                             <div class="media-icon">
-                                <div class="online-feb">
+                                <div class="online-feb-ins">
                                     <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a>
                                 </div>
-                                <div class="online-feb">
+                                <div class="online-feb-face">
                                     <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
                                 </div>
-                                <div class="online-feb">
+                                <div class="online-feb-tiwi">
                                     <a href="https://twitter.com/i/flow/login"><i class="fab fa-twitter"></i></a>
                                 </div>
-                                <div class="online-feb">
-                                    <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin"></i></a>
+                                <div class="online-feb-linked">
+                                    <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1023,11 +1023,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
 
     <script>
         let currentIndex = 0;
