--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <header class="nav-feix">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <div class="row" style=" padding: 0px 11px; justify-content: space-between">
                     <div class="logo-secondin">
