--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="row" style=" padding: 0px 11px; justify-content: space-between">
                     <div class="logo-secondin">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <h3>Furniture</h3>
                         </a>
                     </div>
