--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -276,7 +277,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -290,7 +291,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +305,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -318,7 +319,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -333,7 +334,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -347,7 +348,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -361,7 +362,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +376,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +391,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -404,7 +405,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -418,7 +419,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +433,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -447,7 +448,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -461,7 +462,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +476,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -489,7 +490,7 @@
                                     <p><span class="disline-font">$105.00 </span> $95.00</p>
                                 </div>
                                 <div class="shop-now-icon">
-                                    <img src="image/cart_btn.png">
+                                    <i class="fas fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -1008,7 +1009,7 @@
     <footer class="fut-infirm mt-5">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4">
-                <a href="furniture.html">
+                <a href="index.html">
                     <div class="fut-logos">
                         <img src="image/LOGO.png">
                     </div>
@@ -1020,7 +1021,6 @@
             <div class="col-lg-2 col-md-2 col-sm-2">
                 <div class="furni-category">
                     <h6>Category</h6>
-
                     <p><a href="#">Living Room</a></p>
                     <p><a href="#">Bed Room</a></p>
                     <p><a href="#">Kitchan</a></p>
