--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <h1>Perfect<br>Harmony:<br>Comfort & Style</h1>
                         </div>
                         <div class="furni-explo">
-                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home</p>
+                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home.</p>
                         </div>
                         <div class="offers-bat">
                             <div class="offer-seen">
@@ -510,7 +510,7 @@
                             <p style="color: gray;">Experience the epitome of furniture quality. Our products are
                                 meticulously crafted with an
                                 unwavering commitment to excellence. From the finest materials to expert craftsmanship,
-                                each
+                                each that show
                                 piece embodies durability, comfort, and timeless style. Elevate your space with the
                                 assurance of
                                 exceptional quality and lasting beauty</p>
@@ -812,7 +812,7 @@
                                     <p>I recently purchased a beautiful dining table and it has completely transformed
                                         our
                                         dining area. The craftsmanship and attention to detail are truly remarkable. The
-                                        table
+                                        table that show
                                         is not only a functional piece of furniture but also a work of art that our
                                         family
                                         and
@@ -840,7 +840,7 @@
                                     <p>I recently purchased a beautiful dining table and it has completely transformed
                                         our
                                         dining area. The craftsmanship and attention to detail are truly remarkable. The
-                                        table
+                                        table that show
                                         is not only a functional piece of furniture but also a work of art that our
                                         family
                                         and
@@ -868,7 +868,7 @@
                                     <p>I recently purchased a beautiful dining table and it has completely transformed
                                         our
                                         dining area. The craftsmanship and attention to detail are truly remarkable. The
-                                        table
+                                        table that show
                                         is not only a functional piece of furniture but also a work of art that our
                                         family
                                         and
@@ -1050,7 +1050,7 @@
                     <h6>Follow Us</h6>
                     <p><a href="https://www.facebook.com/">Facebook</a></p>
                     <p><a href="https://www.instagram.com/">Instagram</a></p>
-                    <p><a href="#">TikTok</a></p>
+                    <p><a href="https://www.tiktok.com/">TikTok</a></p>
                     <p><a href="https://www.youtube.com/">Youtube</a></p>
                 </div>
             </div>
