--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -42,13 +42,13 @@
                         <div class="contect-fast">
                             <div class="contect-in">
                                 <div class="call-img">
-                                    <img src="image/Call.png">
+                                    <i class="fas fa-phone"></i>
                                     <a href="#">
                                         <p>+ 0123654789</p>
                                     </a>
                                 </div>
                                 <div class="call-img">
-                                    <img src="image/Email.png">
+                                    <i class="fas fa-envelope-square"></i>
                                     <a href="#">
                                         <p>your@gmail.com</p>
                                     </a>
