--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <button class="ofer-sow">Explor Your Offers</button>
                             </div>
                             <div class="watch-vid">
-                                <button class="play-now"> <i class="fa fa-play"> Watch Now </i></button>
+                                <button class="play-now"><i class="fa fa-play"> Watch Now </i></button>
                             </div>
                         </div>
                     </div>
@@ -516,7 +516,7 @@
                                 exceptional quality and lasting beauty</p>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Experience Unparalleled Quality</span>
@@ -524,7 +524,7 @@
                             </div>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Built to Last for Generations</span>
@@ -532,7 +532,7 @@
                             </div>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Loved by Customers Worldwide</span>
@@ -558,12 +558,12 @@
                                     <span>Furniture Craftsmanship</span>
                                 </div>
                                 <div class="contact-oner">
-                                    <img class="comaent-oner" src="image/Group 109.png">
+                                    <i class="fa-regular fa-comment"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="unicon-icon">
-                            <img class="rigtred-icon" src="image/Union.png">
+                            <i class="fa-regular fa-circle-check"></i>
                             <span>We think about every detail</span>
                         </div>
                     </div>
@@ -629,12 +629,12 @@
                                     <span>Furniture Craftsmanship</span>
                                 </div>
                                 <div class="contact-oner">
-                                    <img class="comaent-oner" src="image/Group 109.png">
+                                    <i class="fa-regular fa-comment"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="unicon-icon">
-                            <img class="rigtred-icon" src="image/Union.png">
+                            <i class="fa-regular fa-circle-check"></i>
                             <span>We think about every detail</span>
                         </div>
                     </div>
@@ -650,7 +650,7 @@
                                 exceptional quality and lasting beauty</p>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Experience Unparalleled Quality</span>
@@ -658,7 +658,7 @@
                             </div>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Built to Last for Generations</span>
@@ -666,7 +666,7 @@
                             </div>
                             <div class="build-last">
                                 <div class="true-img">
-                                    <img src="image/Subtract.png">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 <div class="unparalled">
                                     <span class="inspec-ter">Loved by Customers Worldwide</span>
