--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                 </div>
                 <div class="subcrib">
                     <span email="youremail@gmail.com">E.g. youremail@gmail.com</span>
-                    <button class="subcri-btn">Subscribe</button>
+                    <button class="subcrib-btn">Subscribe</button>
                 </div>
             </div>
         </div>
