--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                                 </li>
                                 <li class="nav-item">
                                     <div class="web-sign">
-                                        <button class="sign-in">Sign In</button>
-                                        <button class="sign-up">Sign Up</button>
+                                        <a href="sign_in.html"><button class="sign-in">Sign In</button></a>
+                                        <a href="sign_up.html"><button class="sign-up">Sign Up</button></a>
                                     </div>
                                 </li>
                             </ul>
