--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,12 @@
                     <p><a href="https://www.youtube.com/">Youtube</a></p>
                 </div>
             </div>
+            <div class="copy-right col-lg-12">
+                <span>© 2023 by Logo Furniture. All rights reserved.</span>
+            </div>
         </div>
     </footer>
+    
 
     <script>
         let currentIndex = 0;
