--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <a class="nav-link" href="#">About</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link" href="#">Furniture <img src="image/Vector.png"></a>
+                                    <a class="nav-link" href="#">Furniture <i class="fas fa-caret-down"></i></a>
                                     <div class="dropdown-content">
                                         <a href="#">Table</a>
                                         <a href="#">Chair</a>
@@ -119,7 +119,7 @@
                             <h1>Perfect<br>Harmony:<br>Comfort & Style</h1>
                         </div>
                         <div class="furni-explo">
-                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home.</p>
+                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home.</p>  
                         </div>
                         <div class="offers-bat">
                             <div class="offer-seen">
