--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -119,7 +121,7 @@
                             <h1>Perfect<br>Harmony:<br>Comfort & Style</h1>
                         </div>
                         <div class="furni-explo">
-                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home.</p>  
+                            <p>Explore furniture that harmoniously combines comfort and style to elevate your home.</p>
                         </div>
                         <div class="offers-bat">
                             <div class="offer-seen">
@@ -546,7 +548,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="elevate-img">
                             <img class="elevate-move" src="image/Frame.png">
-                            <img src="image/Group 113.png" class="vert-move"/>
+                            <img src="image/Group 113.png" class="vert-move" />
                         </div>
                         <div class="onaer-web">
                             <div class="onaer-img">
@@ -617,7 +619,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="elevate-img">
                             <img class="elevate-move" src="image/Frame 48.png">
-                            <img src="image/Group 114.png" class="vert-move"/>
+                            <img src="image/Group 114.png" class="vert-move" />
                         </div>
                         <div class="onaer-web">
                             <div class="onaer-img">
@@ -699,13 +701,21 @@
                             </div>
                             <div class="reating-star">
                                 <div class="quality-fur">
-                                    <img src="image/Group 151.png">
-                                    <p>4.6 / 5 rating</p>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <p>4.9 / 5 rating</p>
                                     <p>Qualitity</p>
                                 </div>
                                 <div class="quality-fur">
-                                    <img src="image/Group 151.png">
-                                    <p>4.8 / 5 rating</p>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <i class="material-icons">star</i>
+                                    <p>4.9 / 5 rating</p>
                                     <p>Qualitity</p>
                                 </div>
                             </div>
@@ -826,7 +836,11 @@
                                         <span>Michael Roberts</span>
                                     </div>
                                     <div class="cus-name">
-                                        <img src="image/Frame 1013.png">
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star_half</i>
                                     </div>
                                 </div>
                             </div>
@@ -854,7 +868,11 @@
                                         <span>Michael Roberts</span>
                                     </div>
                                     <div class="cus-name">
-                                        <img src="image/Frame 1013.png">
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star_half</i>
                                     </div>
                                 </div>
                             </div>
@@ -882,7 +900,11 @@
                                         <span>Michael Roberts</span>
                                     </div>
                                     <div class="cus-name">
-                                        <img src="image/Frame 1013.png">
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star_half</i>
                                     </div>
                                 </div>
                             </div>
@@ -910,7 +932,11 @@
                                         <span>Michael Roberts</span>
                                     </div>
                                     <div class="cus-name">
-                                        <img src="image/Frame 1013.png">
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star</i>
+                                        <i class="material-icons">star_half</i>
                                     </div>
                                 </div>
                             </div>
@@ -1054,13 +1080,13 @@
                     <p><a href="https://www.youtube.com/">Youtube</a></p>
                 </div>
             </div>
-            <div class="copy-right col-lg-12">
-                <span>© 2023 by Logo Furniture. All rights reserved.</span>
-            </div>
+        </div>
+        <div class="copy-right col-lg-12">
+            <span>© 2023 by Logo Furniture. All rights reserved.</span>
         </div>
     </footer>
-    
 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
     <script>
         let currentIndex = 0;
 
