--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                     <p><a href="#">Product</a></p>
                     <p><a href="#">Services</a></p>
                     <p><a href="#">Article</a></p>
-                    <p><a href="#">bout Us</a></p>
+                    <p><a href="#">About Us</a></p>
                 </div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2">
