--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main-servi">   
+                <div class="main-servi">
                     <div class="serv-name">
                         <h6>Free Shipping</h6>
                         <div class="seating">
@@ -730,9 +730,7 @@
                                 <div class="Craftsmanship">
                                     <h4>Quality Craftsmanship</h4>
                                     <p>Our furniture is meticulously handcrafted to stand the test of time, ensuring it
-                                        can
-                                        be
-                                        enjoyed for generations to come.</p>
+                                        can be enjoyed for generations to come.</p>
                                 </div>
                             </div>
                             <div class="serv-inform">
