--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                                 <h1>Our Dedication to<br>Your Satisfaction</h2>
                             </div>
                             <div class="provid-abot">
-                                <p>, we take pride in our unwavering commitment to quality and customer satisfaction.
+                                <p> we take pride in our unwavering commitment to quality and customer satisfaction.
                                     With a
                                     track
                                     record of excellence, we provide you with the finest furniture and a service you can
