--- a/index.html
+++ b/index.html
@@ -1198,9 +1198,10 @@
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
                         entry.target.classList.add('active');
-                    } else {
-                        entry.target.classList.remove('active');
                     }
+                    // else {
+                    //     entry.target.classList.remove('');
+                    // }
                 });
             }, { threshold: 0.1 });
 
