--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                                 <div class="online-feb-linked">
                                     <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
+                                <!-- <div class="online-feb-whatsapp">
+                                    <a href="https://www.linkedin.com/login"><i class="fab fa-whatsapp"></i></a>
+                                </div> -->
                             </div>
                         </div>
                         <div class="compesring d-flex" style="justify-content: space-between;">
